--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,6 +7,8 @@ compatibility_date = "2024-01-17"
 # Docs: https://developers.cloudflare.com/workers/platform/environment-variables
 # [vars]
 # MY_VARIABLE = "production_value"
+[triggers]
+crons = ["5 9 * * *"]
 
 # Bind a KV Namespace. Use KV as persistent storage for small key-value pairs.
 # Docs: https://developers.cloudflare.com/workers/runtime-apis/kv
