--- a/wrangler.toml
+++ b/wrangler.toml
@@ -8,7 +8,7 @@ compatibility_date = "2024-01-17"
 # [vars]
 # MY_VARIABLE = "production_value"
 [triggers]
-crons = ["5 15 * * *"]
+crons = ["5 0 * * 1"]
 
 # Bind a KV Namespace. Use KV as persistent storage for small key-value pairs.
 # Docs: https://developers.cloudflare.com/workers/runtime-apis/kv
